Añadidas imágenes de las tablas de la eficiencia y de las representaciones

--- a/estudiante/doc/mainpage.dox
+++ b/estudiante/doc/mainpage.dox
@@ -1,27 +1,13 @@
-/*! \mainpage Título de la página principal
+/*! \mainpage Práctica 1. Imágenes
 
-@image html doxyque.png "Pie de foto"
-
-# Información sobre Doxygen
-Doxygen admite el uso de la [sintaxis de Markdown (Consulta aquí los comandos básicos)](https://www.markdownguide.org/basic-syntax).
-
-Así como el uso de  <a href="https://htmlcheatsheet.com/">sintaxis <strong>HTML</strong></a>. Esto es especialmente útil
-para aquellos aspectos que Markdown no permite modificar, como el <span  style="color:red">color</span>. Aunque es buena idea evitarlo en la medida de lo posible, por dos
-motivos:
-
-1. <span style="font-size:1.1em">Hace el código <strong>poco</strong> <span style="  background-image: linear-gradient(to left, #4285f4, #34a853, #fbbc05, #ea4335); -webkit-background-clip: text; color: transparent;"> <strong> LEGIBLE </strong> </span></span>
-2. La idea detrás de Markdown es separar _aspecto_ y _contenido_. Y es una __gran idea__.
-
-La forma más correcta de modificar el aspecto debería ser mediante un documento ``.css`` configurado en el archivo ``Doxyfile.in``.
-Si te interesa, puedes echarle un vistazo a la [documentación](https://www.doxygen.nl/manual/customize.html) o a
-temas customizados como [este](https://jothepro.github.io/doxygen-awesome-css/). Aunque el tema por defecto nos parece
-perfecto, _CLÁSICO_. Así puedes centrarte en el contenido.
-
-Por último, lo hemos visto en clase y hay suficientes ejemplos en el código fuente proporcionado, pero puedes consultar la
-mayor parte de la sintaxis de Doxygen para comentar código en su
-[documentación](https://www.doxygen.nl/manual/docblocks.html).
 
 # Introducción
+En esta primera práctica nos centraremos la clase `Image` y la usaremos para diferentes tareas de tratamiento de
+imágenes que se deberán implementar, tales como convertir una imagen a su negativo o realizarle un zoom.
+
+Además, estudiaremos dos formas distintas de representar internamente esta clase así como analizar el impacto en la
+eficiencia del programa dependiendo de cuál se utilice.
+
 
 ### Ejecutables:
 - @ref negativo
@@ -30,6 +16,9 @@ mayor parte de la sintaxis de Doxygen para comentar código en su
 - @ref icono
 - @ref contraste
 - @ref barajar
+
+### Representaciones:
+- @ref page_repImagen
 
 ### Análisis de la eficiencia
 - @ref eficiencia
@@ -108,7 +97,14 @@ Genera una imagen a partir de un barajado pseudoaleatorio de las filas de otra i
 @param "<fich_rdo>" Nombre del fichero que contendrá la imagen resultado.
 
 
+
+
+
+
 @page eficiencia Análisis de eficiencia
+
+Estudiaremos la eficiencia de ambas representaciones al utilizar el método [`ShuffleRows()`](classImage.html#a27d5bab7af11a729048b82af06f2d0c0)
+
 > [__Enlace__ a las gráficas del análisis de eficiencia](https://ugres-my.sharepoint.com/:x:/g/personal/e_jaimecrz04_ms_ugr_es/Ee4cMK-BpR9BvLF1enI-bh4BGf4G8KANg5IBchN-gCg4cQ?e=aH1sLr).
 
 @section primera_rep Primera Representación
@@ -116,19 +112,26 @@ Genera una imagen a partir de un barajado pseudoaleatorio de las filas de otra i
 
 ## Filas y Columnas variables:
 El análisis teórico nos indica que estamos ante una eficiencia de __O(rows*cols)__
-ya que tenemos que recorrer las filas y columnas completas al ejecutar Shufflerows
+ya que tenemos que recorrer las filas y columnas completas al ejecutar Shufflerows.
 
 Esto coincide con el análisis empírico ya que la gráfica que mejor ajusta los datos,
 es decir, la que tiene un coeficiente de correlación(R² entre [0,1]) mayor es la
 __polinomial de grado dos__, como esperábamos.
 
+@image html 1_Rows&Cols.png
+
 ## Filas fijas (filas = 100) / Columnas fijas (columnas = 100):
 El análisis teórico nos indica que estamos ante una eficiencia de __O(rows),O(cols)__ (respectivamente)
-ya que solo movemos o por un lado las columnas o por otro lado las filas
+ya que solo movemos o por un lado las columnas o por otro lado las filas.
 
 Esto coincide con el análisis empírico ya que la gráfica que mejor ajusta los datos,
 es decir, la que tiene un coeficiente de correlación(R² entre [0,1]) mayor es la
 __polinomial de grado uno__, como esperábamos.
+|   |   |   |
+|---|---|---|
+| @image html 1_rows.png |  | @image html 1_cols.png |
+
+\n\n
 
 @section segunda_rep Segunda Representación
 @ref sec_Image_B
@@ -138,21 +141,33 @@ Al cambiar la representación aunque variemos filas y columnas, estamos hablando
 de __O(rows)__, ya que solo necesitamos variar las filas.
 
 Esto coincide con el análisis empírico ya que si miramos la gráfica, la que mejor
-la ajusta es una __polinomial de grado uno__, como esperábamos
+la ajusta es una __polinomial de grado uno__, como esperábamos.
+
+@image html 2_rows&cols.png
 
 ## Filas fijas (filas = 100):
 En este caso, como ya hemos comentado, la nueva represantación solo afecta a las filas,
-luego si las filas quedan fijas, estamos antes __O(1)__
+luego si las filas quedan fijas, estamos antes __O(1)__.
 
-Esto coincide con el análisis empírico ya que el ajuste es __constante__
+Esto coincide con el análisis empírico ya que el ajuste es __constante__.
+
+@image html 2_rows.png
 
 ## Columnas fijas (columnas = 100):
 Por último si variamos solo las filas, nos va a salir claramente __O(rows)__
 ya que como hemos comentado anteriormente, para esta representación
-solo tenemos que recorrer las filas
+solo tenemos que recorrer las filas.
 
 Esto coincide con el análisis empírico ya que el ajuste es __polinomial de grado uno__
-como esperábamos
+como esperábamos.
 
+@image html 2_cols.png
+
+
+### Conclusión:
+Podemos observar que para el método [`ShuffleRows()`](classImage.html#a27d5bab7af11a729048b82af06f2d0c0) es más
+eficiente usar la segunda representación. Sin embargo, al ganar eficiencia en ese método también la perderemos en otros
+tales como el método [`Save()`](classImage.html#adde1007dc6359087dae65fa8cae26448), por lo que la decisión de usar
+una u otra representación dependerá de nuestras necesidades.
 
 */
